# wzwin

./: .gitignore  CMakeLists.txt  decision.md  game.dia  make.bat
CMakeModules/: FindSDL2.cmake  FindWZ.cmake
src/: CMakeLists.txt  client.c  main.c  server.c
src/net/: general.h  unix.c  unix.h  win.c  win.h
